--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "fix": "vue-cli-service lint --fix"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
     "jquery-ui": "^1.12.1",
     "npm": "^6.11.3",
+    "popper.js": "^1.15.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
